# alloy-disorder-sims

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 1D_solvers_examples.ipynb  1D_solvers_test.ipynb  2D_heterostructure_examples.ipynb  2D_heterostructure_test.ipynb  2D_solvers_examples.ipynb  3D_heterostructure_examples.ipynb  3D_solvers_examples.ipynb  sigma_delta_consistency_test.ipynb  vertical_profile_examples.ipynb
src/: constants.py  solvers.py  vertical_profile.py
src/helpers/: solver_helpers.py  statistics_helpers.py
src/heterostructure_models/: dot_2d.py  dot_3d.py
